--- a/src/Common/Navbar/Navbar.scss
+++ b/src/Common/Navbar/Navbar.scss
@@ -38,6 +38,7 @@
 
     .lists {
       .list {
+        margin-right: 4rem;
         list-style-type: none;
         display: flex;
         gap: 2rem;
@@ -179,59 +180,43 @@
     }
 
     li {
-      // .link {
-      //   color: black;
-      //   background-color: $main;
+    }
+  }
+}
 
-      //   font-size: 1.2rem;
-      //   position: relative;
+.fixedZero {
+  position: fixed;
+  color: yellow;
+  z-index: 100;
+  bottom: 3%;
+  left: 3%;
+  h2 {
+    font-size: 5rem;
+    @media (max-width: 500px) {
+      font-size: 2rem;
+    }
 
-      //   .sublinks {
-      //     border-top: 2px solid $main;
-      //     background-color: white;
-      //     width: max-content;
-      //     color: black;
-      //     box-shadow: 0px 0px 40px -20px rgb(0, 0, 0);
-      //     display: flex;
-      //     left: 0;
-      //     flex-direction: column;
-      //     position: absolute;
-      //     top: 100%;
-      //     z-index: 11;
-      //     list-style-type: none;
-      //     visibility: hidden;
-      //     transform: scaleY(0);
-      //     transform-origin: 0 0 0;
-      //     opacity: 0;
-      //     transition: all 0.5s ease;
+    span {
+      font-size: 2.3rem;
+      @media (max-width: 500px) {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
 
-      //     li {
-      //       padding: 0.5rem 1rem;
-      //       font-weight: 400;
-      //       border-bottom: solid 1px #e9e9e9;
-
-      //       &:hover {
-      //         background-color: $main;
-      //         color: white;
-      //       }
-      //     }
-      //   }
-
-      //   .sublinks.active {
-      //     transform: scaleY(1);
-      //     opacity: 1;
-      //     visibility: visible;
-      //   }
-
-      //   &:hover {
-      //     color: $main;
-      //   }
-
-      //   &.active {
-      //     background-color: $main;
-      //     color: $main;
-      //   }
-      // }
+.fixedsche {
+  position: fixed;
+  background-color: red;
+  color: white;
+  z-index: 100;
+  bottom: 50%;
+  right: 3%;
+  padding: 0.5rem 1rem;
+  h2 {
+    font-size: 2rem;
+    @media (max-width: 500px) {
+      font-size: 1rem;
     }
   }
 }
