--- a/src/Pages/Owner/Owner.css
+++ b/src/Pages/Owner/Owner.css
@@ -87,7 +87,7 @@ img {
 }
 
 .main-banner-wrappe .main-banner .main-content h2 {
-  font-size: 2.4rem;
+  font-size: 2.6rem;
 }
 
 @media (max-width: 500px) {
@@ -525,5 +525,64 @@ img {
 
 .counter .box-contain .box .span.four {
   color: #a666f7;
+}
+
+.refer {
+  padding: 5% 10%;
+  background-color: #3492ff;
+  color: white;
+}
+
+@media (max-width: 500px) {
+  .refer {
+    padding: 5% 5%;
+  }
+}
+
+.refer .heading h2 {
+  font-size: 2.5rem;
+}
+
+@media (max-width: 500px) {
+  .refer .heading h2 {
+    font-size: 2rem;
+  }
+}
+
+.refer .heading h3 {
+  font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+  .refer .heading h3 {
+    font-size: 1.5rem;
+  }
+}
+
+.refer .heading p {
+  color: white;
+  margin-bottom: 1.5rem;
+}
+
+.refer .heading a {
+  background-color: white;
+  font-size: 1.8rem;
+  padding: 0.5rem 1rem;
+  color: #3492ff;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.refer .heading a:hover {
+  background-color: black;
+  color: white;
+  -webkit-transform: translateY(-7px);
+          transform: translateY(-7px);
+}
+
+@media (max-width: 500px) {
+  .refer .heading a {
+    font-size: 1.2rem;
+  }
 }
 /*# sourceMappingURL=Owner.css.map */
