--- a/src/Pages/SingleLocation/SingleLocation.css
+++ b/src/Pages/SingleLocation/SingleLocation.css
@@ -29,6 +29,12 @@ img {
   padding: 5% 10%;
 }
 
+@media (max-width: 500px) {
+  .singleLocationWrapper {
+    padding: 5% 5%;
+  }
+}
+
 .singleLocationWrapper .singleLocation .heading {
   text-align: center;
   margin-bottom: 2rem;
@@ -36,6 +42,12 @@ img {
 
 .singleLocationWrapper .singleLocation .heading h2 {
   font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+  .singleLocationWrapper .singleLocation .heading h2 {
+    font-size: 1.5rem;
+  }
 }
 
 .singleLocationWrapper .singleLocation .properties-container {
@@ -104,6 +116,7 @@ img {
 }
 
 .singleLocationWrapper .singleLocation .properties-container .property-box .property-info {
+  margin-top: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -118,11 +131,16 @@ img {
   gap: 0.5rem;
 }
 
+@media (max-width: 500px) {
+  .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .address {
+    font-size: 1rem;
+  }
+}
+
 .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 1rem;
   border: solid 3px #eee;
   padding: 0rem 2rem;
 }
@@ -152,6 +170,12 @@ img {
 
 .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .icons .icon p {
   font-size: 1rem;
+}
+
+@media (max-width: 500px) {
+  .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .icons .icon p {
+    font-size: 0.8rem;
+  }
 }
 
 .singleLocationWrapper .singleLocation .properties-container .property-box .property-info .amount {
