--- a/src/Pages/SingleLocation/SingleLocation.scss
+++ b/src/Pages/SingleLocation/SingleLocation.scss
@@ -2,12 +2,18 @@
 
 .singleLocationWrapper {
   padding: 5% 10%;
+  @media (max-width: 500px) {
+    padding: 5% 5%;
+  }
   .singleLocation {
     .heading {
       text-align: center;
       margin-bottom: 2rem;
       h2 {
         font-size: 2rem;
+        @media (max-width: 500px) {
+          font-size: 1.5rem;
+        }
       }
     }
 
@@ -53,15 +59,28 @@
         }
 
         .property-info {
+          margin-top: 1rem;
           display: flex;
           flex-direction: column;
           align-items: center;
           font-size: 1.2rem;
           gap: 0.5rem;
 
+          .address {
+            @media (max-width: 500px) {
+              font-size: 1rem;
+            }
+          }
+
           .icons {
             display: flex;
-            gap: 1rem;
+            // width: 100%;
+            // margin-top: 2rem;
+            // display: grid;
+            // gap: 1rem;
+            // grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
+
+            // gap: 1rem;
             border: solid 3px #eee;
             padding: 0rem 2rem;
             @media (max-width: 500px) {
@@ -78,6 +97,9 @@
 
               p {
                 font-size: 1rem;
+                @media (max-width: 500px) {
+                  font-size: 0.8rem;
+                }
               }
             }
           }
