--- a/src/Pages/Owner/Owner.css
+++ b/src/Pages/Owner/Owner.css
@@ -479,8 +479,7 @@ img {
 }
 
 .counter {
-  padding: 5% 10%;
-  background-color: #222;
+  padding: 2% 10%;
 }
 
 @media (max-width: 500px) {
@@ -490,6 +489,8 @@ img {
 }
 
 .counter .box-contain {
+  padding: 2rem 0;
+  background-color: #222;
   grid-gap: 2rem;
   display: -ms-grid;
   display: grid;
@@ -525,6 +526,48 @@ img {
 
 .counter .box-contain .box .span.four {
   color: #a666f7;
+}
+
+.counter .box-contain-one {
+  padding: 2rem 0;
+  grid-gap: 2rem;
+  display: -ms-grid;
+  display: grid;
+  gap: 2rem;
+  -ms-grid-columns: (minmax(15rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+}
+
+.counter .box-contain-one .box {
+  text-align: center;
+  padding: 2rem;
+  border-radius: 5rem;
+  background-color: green;
+}
+
+.counter .box-contain-one .box span {
+  font-size: 4rem;
+}
+
+.counter .box-contain-one .box h4 {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.counter .box-contain-one .box .span.one {
+  color: #f76766;
+}
+
+.counter .box-contain-one .box .span.two {
+  color: #265fdb;
+}
+
+.counter .box-contain-one .box .span.three {
+  color: #57c0ce;
+}
+
+.counter .box-contain-one .box .span.four {
+  color: black;
 }
 
 .refer {
