--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -359,13 +359,14 @@
 }
 
 .counter {
-  padding: 5% 10%;
+  padding: 2% 10%;
   @media (max-width: 500px) {
     padding: 5% 5%;
   }
-  background-color: #222;
 
   .box-contain {
+    padding: 2rem 0;
+    background-color: #222;
     grid-gap: 2rem;
     display: grid;
     gap: 2rem;
@@ -393,6 +394,46 @@
         }
         &.four {
           color: #a666f7;
+        }
+      }
+    }
+  }
+
+  .box-contain-one {
+    padding: 2rem 0;
+    // background-color: #222;
+    grid-gap: 2rem;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    // justify-content: center;
+
+    .box {
+      text-align: center;
+      // width: fit-content;
+      padding: 2rem;
+      border-radius: 5rem;
+      background-color: green;
+      span {
+        font-size: 4rem;
+      }
+      h4 {
+        font-size: 1.5rem;
+        color: white;
+      }
+
+      .span {
+        &.one {
+          color: #f76766;
+        }
+        &.two {
+          color: #265fdb;
+        }
+        &.three {
+          color: #57c0ce;
+        }
+        &.four {
+          color: black;
         }
       }
     }
