--- a/src/Pages/Owner/Owner.css
+++ b/src/Pages/Owner/Owner.css
@@ -148,6 +148,7 @@ img {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
   text-align: center;
+  border-radius: 0.5rem;
 }
 
 @media (max-width: 500px) {
@@ -237,6 +238,7 @@ img {
       align-self: flex-start;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  border-radius: 0.5rem;
 }
 
 @media (max-width: 500px) {
