--- a/src/Pages/Owner/Owner.scss
+++ b/src/Pages/Owner/Owner.scss
@@ -119,6 +119,7 @@
         align-self: flex-start;
         transition: all 0.5s ease;
         text-align: center;
+        border-radius: 0.5rem;
 
         @media (max-width: 500px) {
           font-size: 0.9rem;
@@ -184,6 +185,7 @@
       font-weight: 500;
       align-self: flex-start;
       transition: all 0.5s ease;
+      border-radius: 0.5rem;
 
       @media (max-width: 500px) {
         font-size: 0.9rem;
